--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Authors@R: c(person(given = "Thevaa",
              family = "Chapppell",
              role = c("aut", "cph")))
 Description: Computes power for response-adaptive randomization with a block design that captures both the time and treatment effect. 
-Suggests: testthat, rmarkdown, pkgdown
+Suggests: testthat, rmarkdown, pkgdown, devtools
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
