--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,4 @@ importFrom(stats,lm)
 importFrom(stats,mantelhaen.test)
 importFrom(stats,rbinom)
 importFrom(stats,rnorm)
+importFrom(tibble,as.tibble)
