--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,4 +22,5 @@ BugReports: https://github.com/thevaachandereng/blockRAR/issues
 Imports: dplyr,
     knitr,
     magrittr, 
-    ldbounds
+    ldbounds,
+    tibble
