--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export("%>%")
 export(binomialRAR)
 export(normalRAR)
 import(magrittr)
+importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,summarize)
 importFrom(ldbounds,bounds)
 importFrom(stats,anova)
 importFrom(stats,chisq.test)
