--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,14 @@ export(binomialbayes)
 export(binomialfreq)
 import(magrittr)
 importFrom(arm,bayesglm)
+importFrom(arm,coef)
+importFrom(arm,sim)
 importFrom(bayesDP,bdpbinomial)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,summarize)
 importFrom(ldbounds,bounds)
+importFrom(stats,binomial)
 importFrom(stats,chisq.test)
 importFrom(stats,mantelhaen.test)
 importFrom(stats,rbinom)
