--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(binomialbayes)
 export(binomialfreq)
 import(magrittr)
 importFrom(arm,bayesglm)
-importFrom(arm,coef)
 importFrom(arm,sim)
 importFrom(bayesDP,bdpbinomial)
 importFrom(dplyr,group_by)
@@ -14,6 +13,7 @@ importFrom(dplyr,summarize)
 importFrom(ldbounds,bounds)
 importFrom(stats,binomial)
 importFrom(stats,chisq.test)
+importFrom(stats,coef)
 importFrom(stats,mantelhaen.test)
 importFrom(stats,rbinom)
 importFrom(tibble,as.tibble)
