fixed strata bayes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(binomialbayes)
 export(binomialfreq)
 export(prop_strata)
+export(prop_stratabayes)
 import(magrittr)
 importFrom(arm,bayesglm)
 importFrom(arm,sim)
