--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,12 @@ Authors@R: c(person(given = "Thevaa",
              family = "Chapppell",
              role = c("aut", "cph")))
 Description: Computes power for response-adaptive randomization with a block design that captures both the time and treatment effect. 
-Suggests: testthat, rmarkdown, pkgdown, devtools, ggplot2
+Suggests: testthat, 
+     rmarkdown, 
+     pkgdown, 
+     devtools, 
+     ggplot2, 
+     knitr
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -20,7 +25,6 @@ VignetteBuilder: knitr
 URL: https://github.com/thevaachandereng/blockRAR
 BugReports: https://github.com/thevaachandereng/blockRAR/issues
 Imports: dplyr,
-    knitr,
     magrittr, 
     ldbounds,
     tibble,
