--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,5 +17,6 @@ importFrom(stats,chisq.test)
 importFrom(stats,coef)
 importFrom(stats,mantelhaen.test)
 importFrom(stats,quasi)
+importFrom(stats,rbeta)
 importFrom(stats,rbinom)
 importFrom(tibble,as.tibble)
