--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ importFrom(stats,model.offset)
 importFrom(stats,model.response)
 importFrom(stats,pnorm)
 importFrom(stats,pweibull)
+importFrom(stats,qnorm)
 importFrom(stats,quantile)
 importFrom(stats,quasi)
 importFrom(stats,rbeta)
